# cogl-sharp

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  cogl-sharp-1.0.pc.in  configure.ac
samples/: BasicVideoPlayer.cs  Crate.cs  HelloWorld.cs  Makefile.am
samples/effectPlayer/: Borders.cs  EdgeEffect.cs  IEffect.cs  Makefile.am  NoEffect.cs  Program.cs  SquareEffect.cs  WaveyEffect.cs
sources/: Cogl-1.0-merged.metadata  Makefile.am  cogl-sharp-api.raw  cogl-sharp.metadata  cogl-sharp.snk  coglgst-sharp-api.raw  coglgst-sharp.metadata
sources/custom/: Framebuffer.cs  Object.cs  Texture.cs
sources/glue/: Makefile.am
